[package]
name = "FzT"
version = "0.1.0"
edition = "2024"

[dependencies]
rustpython-parser = "0.4.0"
itertools = "0.14.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4.0"
sha2 = "0.10.8"
home = "0.5"
regex = "1"
clap = { version = "4.5.37", features = ["derive"] }
syn = { version = "2", features = ["full", "visit", "parsing"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
strip-ansi-escapes = "0.2.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.20.0"
